force-app/main/default/objects/Invoice_Details__c/Invoice_Details__c.object-meta.xml
<CustomObject>
    <label>Invoice Detail</label>
    <nameField>
        <label>Invoice Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>