force-app/main/default/objects/Invoice_Details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>