force-app/main/default/objects/Invoice_Details__c/fields/Case_IR_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_IR_Number__c</fullName>
    <formula>Case__r.Case_Number_f__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case IR Number</label>
    <type>Text</type>
</CustomField>