force-app/main/default/objects/Invoice_Details__c/fields/Case_Number_IR__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_IR__c</fullName>
    <formula>Case__r.Program_Code__c + RIGHT(TEXT(YEAR( DATEVALUE(Case__r.CreatedDate) )), 2) + &apos;-&apos; + Case__r.Case_Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>