force-app/main/default/objects/Invoice_Details__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <formula>TEXT(Case__r.Decision_Code__c)</formula>
    <label>Decision</label>
    <type>Text</type>
</CustomField>