force-app/main/default/objects/Invoice_Details__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <formula>Case__r.Case_Decision_Date__c</formula>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>