force-app/main/default/objects/Invoice_Details__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>