force-app/main/default/objects/Invoice_Details__c/fields/Entity_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Full_Name__c</fullName>
    <formula>Entity__r.Full_Entity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Full Name</label>
    <type>Text</type>
</CustomField>