force-app/main/default/objects/Invoice_Details__c/fields/Invoice_Header__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Header</label>
    <referenceTo>Invoice_Header__c</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>