force-app/main/default/objects/Invoice_Details__c/fields/Review_Fee__c.field-meta.xml
<CustomField>
    <fullName>Review_Fee__c</fullName>
    <label>Review Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>